# laonOS

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: codeql.yml  release-build.yml
cmake/: Build.cmake  FileSize.py  Find.cmake  Setting.cmake  StringUtility.cmake  Tools.cmake
docs/: CNAME  introdution.md
docs/ko/: introducing.md
docs/ko/reference/: exokernel.md
kernel/: .gdbinit  CMakeLists.txt  README.md  kernel.c  kernel.h
kernel/boot/: CMakeLists.txt  Doxyfile  README.md
kernel/boot/arch/armv7a/: CMakeLists.txt
kernel/boot/arch/armv7a/src/: CMakeLists.txt  platform.c
kernel/boot/arch/x86/: CMakeLists.txt
kernel/boot/arch/x86/include/src/: gdt.h  inline.h
kernel/boot/arch/x86/include/std/: utilities.h
kernel/boot/arch/x86/src/: CMakeLists.txt  boot.s  platform.c  serial.c
kernel/boot/arch/x86/std/: CMakeLists.txt
kernel/boot/configs/: grub-debug.cfg  grub-test.cfg  grub.cfg  linker_script.ld
kernel/boot/include/src/: elf64.h  info.h  init.h  main.h  module.h  multiboot.h  platform.h  serial.h
kernel/boot/include/std/: macro.h  stdio.h  stdlib.h  string.h  utilities.h
kernel/boot/src/: CMakeLists.txt  init.c  main.c
kernel/boot/std/: CMakeLists.txt  utilities.c
kernel/boot/test/: CMakeLists.txt
kernel/boot/test/std/: stdlib.test.c  string.test.c
kernel/include/basic/: macro.h
kernel/include/platform/x86_64/: memory.h
kernel/include/src/: cpu.h  disk.h  main.h  mm.h  net.h
kernel/src/: main.c
kernel/src/basic/: CMakeLists.txt
kernel/src/platform/: CMakeLists.txt
kernel/src/platform/x86_64/: CMakeLists.txt  memory.c
kernel/std/include/: stdio.h  string.h  utilities.h
kernel/std/src/: CMakeLists.txt  stdio.c  string.c
licenses/: LICENSE_Multiboot2.txt
loader/: .gdbinit  CMakeLists.txt  Doxyfile  README.md  link.ld  loader.asm  loader.c  loader.h
loader/arch/armv7a/: CMakeLists.txt
loader/arch/armv7a/src/: CMakeLists.txt
loader/arch/i386/: CMakeLists.txt
loader/arch/i386/include/src/: inline.h
loader/arch/i386/include/std/: utilities.h
loader/arch/i386/src/: CMakeLists.txt  platform.c  serial.c
loader/arch/i386/std/: CMakeLists.txt  stdio.c
loader/arch/x86/: CMakeLists.txt
loader/arch/x86/include/src/: gdt.h  inline.h
loader/arch/x86/include/std/: utilities.h
loader/arch/x86/src/: CMakeLists.txt  boot.asm  platform.c
loader/arch/x86/std/: CMakeLists.txt  stdio.c  stdlib.c  string.c
loader/asm/: boot-i386.asm
loader/configs/: grub-debug.cfg  grub-test.cfg  grub.cfg
loader/include/: elf64.h  gdt.h  info.h  init.h  inline.h  module.h  multiboot.h  page.h  platform.h
loader/include/platform/i386/: gdt.h
loader/include/src/: elf64.h  info.h  init.h  main.h  module.h  multiboot.h  platform.h  serial.h
loader/include/std/: macro.h  stdio.h  stdlib.h  string.h  utilities.h
loader/source/: elf64.c  init.c
loader/src/: CMakeLists.txt  elf64.c  init.c  loader.c  main.c  module.c
loader/src/platform/: CMakeLists.txt
loader/src/platform/i386/: platform.c
loader/standard/: CMakeLists.txt
loader/standard/include/: macro.h  stdio.h  string.h  utilities.h
loader/standard/source/: stdio.c  string.c  utilities.c
loader/std/: CMakeLists.txt  stdio.c  stdlib.c  string.c  utilities.c
loader/std/include/: macro.h  stdlib.h  string.h  utilities.h
loader/std/src/: CMakeLists.txt  stdio.c  stdlib.c  string.c
loader/std/src/platform/: CMakeLists.txt
loader/std/src/platform/i386/: stdlib.c  string.c
loader/test/: CMakeLists.txt
loader/test/std/: stdio.test.c
scripts/: .gitignore
scripts/macOS/: init.sh  qemu_run.sh
test/: README.md
test/client/: CMakeLists.txt
test/server/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/include/: call.h  check.h  protocol.h  test.h
test/unit/src/: call.c  check.c  test.c
tools/cmake/: Build.cmake  Setting.cmake  Tools.cmake
tools/console/: CMakeLists.txt  main.cpp
tools/console/common/: argument.cpp
tools/console/unit/: call.cpp  format.cpp  process.cpp  protocol.cpp  qemu.cpp  tty.cpp
tools/scripts/: Dockerfile  init_Debian.sh  init_docker.sh  init_macOS.zsh  qemu_debug.sh  qemu_run.sh
tools/scripts/macOS/: init.sh  qemu_debug.sh  qemu_run.sh
